fix message after importing keys

The message was telling that no key was imported if the last column of the
IMPORT_RES line was 0, which gives the keys that were not imported or the
skipped v3 keys depending on the version of GnuPG. Change the logic to what
is was meant to show: say nothing was imported if _all_ fields are 0.

BUG:368950
FIXED-IN:17.08.3